[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/baseball_stats_python"]

[project]
name = "baseball-stats-python"
dynamic = ["version"]
authors = [{ name = "Li-Hsuan Hsieh", email = "ss77995ss@gmail.com" }]
description = "A python pacakge for getting baseball stats"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ss77995ss/baseball-stats-python"
Issues = "https://github.com/ss77995ss/baseball-stats-python/issues"

[tool.hatch.version]
path = "src/baseball_stats_python/__about__.py"

[tool.pytest.ini_options]
pythonpath = [".", "src"]
